# devleadhunter

./: .gitattributes  .gitignore  BUSINESS_PLAN.md  CLEANUP_PROGRESS.md  EMAIL_SETUP.md  FTP_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION MAQUETTE DEVLEADHUNTER.txt  NOUVELLE_IMPLEMENTATION.md  PROSPECTS_FEATURES.md  QUALITE_B2B_PROGRESS.md  R2_STORAGE_PLAN.md  README.md  STRIPE_SETUP.md  TEMPLATES_ARCHITECTURE.md  TODO_TEMPLATES_MIGRATION.md  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.codex/: config.toml
.husky/: pre-commit
api/: .env.example  .gitignore  EMAIL_ENV_SETUP.md  README.md  STANDARDS_CODE_ET_ARCHITECTURE.md  STRIPE_SETUP.md  init_db.py  main.py  mt.html  pyproject.toml  requirements.txt  run_dev.py  test_bedee_comparison.py
client/: app.vue  i18n.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
demo-host/: .env.example  .prettierignore  README.md  STANDARDS_CODE_ET_ARCHITECTURE.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
docs/: BUSINESS_PLAN.md  LOCAL_DEV.md  README.md
idea_plans/: 01-audit-logiciel.md  02-auto-chainage-tunnel.md
scripts/: convert_interfaces_to_types.py
server/: .env.example  main.py  requirements.txt
web/: .env.example  .env.sync.example  .gitignore  CLAUDE.md  README.md  STANDARDS_CODE_ET_ARCHITECTURE.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: db_sync.rs  lib.rs  main.rs  media_permissions.rs
(+757 files in other folders)
