[package]
name = "devleadhunter-desktop"
version = "0.1.0"
description = "DevLeadHunter Desktop (Nuxt + Tauri)"
authors = ["DevLeadHunter"]
edition = "2021"

[lib]
name = "devleadhunter_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Loads api/.env.sync + web/.env.sync for the debug-only prod → local DB sync command.
dotenvy = "0.15"
